--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.1.0",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
+    "file-type-mime": "^0.3.10",
     "helmet": "^7.1.0",
     "mongodb": "^6.5.0",
     "octokit": "^3.2.0",
@@ -56,6 +58,7 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/request-ip": "^0.0.41",
     "@types/supertest": "^6.0.0",
