--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,9 @@ lerna-debug.log*
 .env
 .env.development.local
 .env.test.local
-.env.production.local
+.env.production
 .env.local
+.en
 
 # temp directory
 .temp
