--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,8 @@ GITHUB_APP_PRIVATE_KEY=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_API_KEY=
+
+BLOCKCHAIN_RPC_URL=
+NFT_CONTRACT_ADDRESS=
+
+CLIENT_ORIGIN=
