--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@octokit/core": "5.1.0",
     "axios": "^1.7.2",
-    "channels-lib": "../channels-lib",
+    "channels-lib": "1.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.1.0",
