--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "helmet": "^7.1.0",
     "mongodb": "^6.5.0",
     "octokit": "^3.2.0",
+    "playwright": "^1.45.0",
     "reflect-metadata": "^0.2.0",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
