--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
+    "ethereum-block-by-date": "^1.4.9",
     "ethers": "5.7",
     "file-type-mime": "^0.3.10",
     "helmet": "^7.1.0",
@@ -59,6 +60,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/compression": "^1.7.5",
+    "@types/ethereum-block-by-date": "^1.4.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
